--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=coffeacloudberry_galleria
+sonar.projectKey=Galleria
 sonar.organization=coffeacloudberry
 
 # Encoding of the source code. Default is default system encoding
