--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start-vercel": "vercel dev",
         "build": "webpack --config config/webpack.prod.js",
         "lint": "eslint . api/**/* src/**/* tests/**/* config --quiet --fix --no-error-on-unmatched-pattern",
-        "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000  --require tests/unit/mocha.env.js"
+        "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000  --require tests/unit/mocha.env.js",
+        "bundle-analysis": "webpack --config config/webpack.analysis.js"
     },
     "repository": {
         "type": "git",
@@ -67,6 +68,7 @@
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4",
         "webpack": "^5.62.0",
+        "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.4.0",
         "webpack-merge": "^5.8.0"
