--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "sendpulse-api": "^1.1.5",
         "snarkdown": "^2.0.0",
         "tippy.js": "^6.3.5",
+        "toastify-js": "^1.11.2",
         "translate.js": "^1.3.2"
     },
     "devDependencies": {
@@ -38,6 +39,7 @@
         "@types/mocha": "^9.0.0",
         "@types/redis": "^2.8.32",
         "@types/request-ip": "^0.0.37",
+        "@types/toastify-js": "^1.9.2",
         "@typescript-eslint/eslint-plugin": "^5.3.0",
         "@typescript-eslint/parser": "^5.3.0",
         "@vercel/node": "^1.12.1",
