--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "webpack --config config/webpack.prod.js",
         "lint": "eslint . api/**/* src/**/* tests/**/* config --quiet --fix --no-error-on-unmatched-pattern",
         "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000  --require tests/unit/mocha.env.js",
-        "bundle-analysis": "webpack --config config/webpack.analysis.js"
+        "bundle-analysis": "webpack --config config/webpack.analysis.js",
+        "doc": "typedoc --tsconfig tsconfig.json"
     },
     "repository": {
         "type": "git",
@@ -75,6 +76,7 @@
         "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
+        "typedoc": "^0.22.8",
         "typescript": "^4.4.4",
         "webpack": "^5.62.0",
         "webpack-bundle-analyzer": "^4.5.0",
