--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
             "dom.iterable"
         ]
     },
+    "typedocOptions": {
+        "entryPoints": ["src/"],
+        "entryPointStrategy": "Expand",
+        "out": "docs"
+    },
     "include": ["src/**/*", "api/**/*", "tests/unit/**/*"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
