--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start-vercel": "vercel dev",
         "build": "webpack --config config/webpack.prod.js",
         "lint": "eslint . api/**/* src/**/* tests/**/* config --quiet --fix --no-error-on-unmatched-pattern",
+        "stylelint": "stylelint src/style/**/*.sass",
         "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000  --require tests/unit/mocha.env.js",
         "bundle-analysis": "webpack --config config/webpack.analysis.js",
         "doc": "typedoc --tsconfig tsconfig.json"
@@ -66,6 +67,7 @@
         "jsdom-global": "^3.0.2",
         "mini-css-extract-plugin": "^2.4.4",
         "mocha": "^9.1.3",
+        "postcss-sass": "^0.5.0",
         "prettier": "^2.4.1",
         "prettier-plugin-import-sort": "^0.0.7",
         "prettier-webpack-plugin": "^1.2.0",
@@ -74,6 +76,7 @@
         "sass-loader": "^12.3.0",
         "sitemap-webpack-plugin": "^1.1.1",
         "style-loader": "^3.3.1",
+        "stylelint": "^14.0.1",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "typedoc": "^0.22.8",
