--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "translate.js": "^1.3.2"
     },
     "devDependencies": {
+        "@sentry/webpack-plugin": "^1.18.3",
         "@tsconfig/recommended": "^1.0.1",
         "@turf/turf": "^6.5.0",
         "@types/chart.js": "^2.9.34",
@@ -89,7 +90,7 @@
     },
     "engines": {
         "node": "^14.18.0",
-        "npm": "^8.2.0"
+        "npm": "^8.0.0"
     },
     "importSort": {
         ".js, .jsx, .ts, .tsx": {
