Add unbound-method rule and json linter

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "webpack serve --config config/webpack.dev.js",
         "start-vercel": "vercel dev",
         "build": "webpack --config config/webpack.prod.js",
-        "lint": "eslint . api/**/* src/**/* tests/**/* config --quiet --fix --no-error-on-unmatched-pattern",
+        "lint": "eslint . api/**/* src/**/* tests/**/* config/**/* --quiet --fix --no-error-on-unmatched-pattern",
         "stylelint": "stylelint src/style/**/*.sass",
         "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000  --require tests/unit/mocha.env.js",
         "bundle-analysis": "webpack --config config/webpack.analysis.js",
@@ -58,6 +58,7 @@
         "dotenv": "^12.0.3",
         "eslint": "^8.6.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-json-es": "^1.5.4",
         "eslint-plugin-prettier": "^4.0.0",
         "file-loader": "^6.2.0",
         "friendly-challenge": "^0.9.0",
