--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,12 @@
     "rules": {
         "@typescript-eslint/no-var-requires": 0,
         "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/unbound-method": [
+            "error",
+            {
+                "ignoreStatic": true
+            }
+        ],
         "max-len": [
             "error",
             {
@@ -17,11 +23,22 @@
         "no-throw-literal": "error"
     },
     "parserOptions": {
+        "project": "tsconfig.json",
         "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
+    ],
+    "overrides": [
+        {
+            "files": ["*.json"],
+            "parser": "eslint-plugin-json-es",
+            "extends": "plugin:eslint-plugin-json-es/recommended",
+            "rules": {
+                "@typescript-eslint/unbound-method": "off"
+            }
+        }
     ]
 }
