--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "private": true,
     "license": "Apache-2.0",
     "dependencies": {
+        "@sentry/node": "^6.17.3",
+        "@sentry/tracing": "^6.17.3",
         "mithril": "^2.0.4",
         "redis": "^4.0.2",
         "request-ip": "^2.1.3",
