--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "translate.js": "^1.3.2"
     },
     "devDependencies": {
+        "@sentry/browser": "^6.17.3",
         "@sentry/webpack-plugin": "^1.18.4",
         "@tsconfig/recommended": "^1.0.1",
         "@turf/turf": "^6.5.0",
