--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
-# must be unique in a given SonarQube instance
-sonar.projectKey=Galleria
+sonar.projectKey=coffeacloudberry_galleria
 sonar.organization=coffeacloudberry
-
-# Encoding of the source code. Default is default system encoding
+sonar.projectName=galleria
 sonar.sourceEncoding=UTF-8
+sonar.sources=src/
+sonar.test.exclusions=tests/**
+sonar.tests=tests/
