--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "webpack --config config/webpack.prod.js",
         "lint": "eslint . api/**/* src/**/* tests/**/* config/**/* --quiet --fix --no-error-on-unmatched-pattern",
         "stylelint": "stylelint src/style/**/*.sass",
-        "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000  --require tests/unit/mocha.env.js",
+        "test": "mocha -r ts-node/register tests/unit/*.test.ts --timeout 15000 --require tests/unit/mocha.env.js",
         "bundle-analysis": "webpack --config config/webpack.analysis.js",
         "doc": "typedoc --tsconfig tsconfig.json"
     },
@@ -19,15 +19,14 @@
     "keywords": [
         "blog",
         "mithril",
-        "spa",
-        "serverless"
+        "spa"
     ],
     "author": "Clément Fontaine",
     "private": true,
     "license": "Apache-2.0",
     "dependencies": {
-        "@sentry/node": "^6.17.4",
-        "@sentry/tracing": "^6.17.4",
+        "@sentry/node": "^6.17.7",
+        "@sentry/tracing": "^6.17.7",
         "mithril": "^2.0.4",
         "redis": "^4.0.3",
         "request-ip": "^2.1.3",
@@ -39,27 +38,27 @@
         "translate.js": "^1.3.2"
     },
     "devDependencies": {
-        "@sentry/browser": "^6.17.4",
-        "@sentry/webpack-plugin": "^1.18.4",
+        "@sentry/browser": "^6.17.7",
+        "@sentry/webpack-plugin": "^1.18.5",
         "@tsconfig/recommended": "^1.0.1",
         "@turf/turf": "^6.5.0",
         "@types/chart.js": "^2.9.35",
         "@types/geojson": "^7946.0.8",
-        "@types/mapbox-gl": "^2.6.0",
+        "@types/mapbox-gl": "^2.6.1",
         "@types/mithril": "^2.0.8",
         "@types/mocha": "^9.1.0",
         "@types/request-ip": "^0.0.37",
         "@types/toastify-js": "^1.11.0",
-        "@typescript-eslint/eslint-plugin": "^5.10.2",
-        "@typescript-eslint/parser": "^5.10.2",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
         "@vercel/node": "^1.12.1",
-        "chart.js": "^3.7.0",
+        "chart.js": "^3.7.1",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.6.0",
         "css-minimizer-webpack-plugin": "^3.4.1",
         "dotenv": "^16.0.0",
-        "eslint": "^8.8.0",
+        "eslint": "^8.9.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-json-es": "^1.5.4",
         "eslint-plugin-prettier": "^4.0.0",
@@ -77,12 +76,12 @@
         "prettier-webpack-plugin": "^1.2.0",
         "robotstxt-webpack-plugin": "^7.0.0",
         "sass": "^1.49.7",
-        "sass-loader": "^12.4.0",
+        "sass-loader": "^12.5.0",
         "sitemap-webpack-plugin": "^1.1.1",
         "style-loader": "^3.3.1",
-        "stylelint": "^14.3.0",
+        "stylelint": "^14.5.0",
         "ts-loader": "^9.2.6",
-        "ts-node": "^10.4.0",
+        "ts-node": "^10.5.0",
         "typedoc": "^0.22.11",
         "typedoc-plugin-not-exported": "^0.1.6",
         "typescript": "^4.5.5",
