--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@typescript-eslint/parser": "^5.12.0",
         "@vercel/node": "^1.12.1",
         "chart.js": "^3.7.1",
+        "chartjs-plugin-annotation": "^1.3.1",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.6.0",
