--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "redis": "^4.0.3",
         "request-ip": "^2.1.3",
         "ress": "^4.0.0",
-        "sendpulse-api": "^1.1.5",
+        "sendpulse-api": "github:coffeacloudberry/sendpulse-rest-api-node.js",
         "snarkdown": "^2.0.0",
         "tippy.js": "^6.3.7",
         "toastify-js": "^1.11.2",
