--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "jsdom-global": "^3.0.2",
         "mini-css-extract-plugin": "^2.5.3",
         "mocha": "^9.2.0",
+        "nock": "^13.2.4",
         "postcss-sass": "^0.5.0",
         "prettier": "^2.5.1",
         "prettier-plugin-import-sort": "^0.0.7",
