--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "request-ip": "^2.1.3",
         "ress": "^5.0.2",
         "sendpulse-api": "github:coffeacloudberry/sendpulse-rest-api-node.js",
-        "snarkdown": "^2.0.0",
+        "snarkdown": "github:coffeacloudberry/snarkdown#2.1.0",
         "tippy.js": "^6.3.7",
         "toastify-js": "^1.11.2",
         "translate.js": "^1.3.2"
