--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     ],
     "author": "Clément Fontaine",
     "private": true,
-    "license": "Apache-2.0",
+    "license": "AGPL-3.0-or-later",
     "dependencies": {
         "@sentry/node": "^6.19.7",
         "@sentry/tracing": "^6.19.7",
@@ -32,7 +32,7 @@
         "request-ip": "^2.1.3",
         "ress": "^5.0.2",
         "sendpulse-api": "github:coffeacloudberry/sendpulse-rest-api-node.js",
-        "snarkdown": "github:coffeacloudberry/snarkdown#2.1.0",
+        "snarkdown": "github:coffeacloudberry/snarkdown#2.1.1",
         "tippy.js": "^6.3.7",
         "toastify-js": "^1.11.2",
         "translate.js": "^1.3.2"
@@ -59,6 +59,7 @@
         "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^3.4.1",
         "dotenv": "^16.0.0",
+        "ejs": "^3.1.7",
         "eslint": "^8.14.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-json-es": "^1.5.7",
@@ -79,7 +80,9 @@
         "robotstxt-webpack-plugin": "^7.0.0",
         "sass": "^1.51.0",
         "sass-loader": "^12.6.0",
+        "schema-utils": "^4.0.0",
         "sitemap-webpack-plugin": "^1.1.1",
+        "spdx-expression-parse": "^3.0.1",
         "style-loader": "^3.3.1",
         "stylelint": "^14.8.1",
         "ts-loader": "^9.3.0",
@@ -91,6 +94,7 @@
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.8.1",
+        "webpack-log": "^3.0.2",
         "webpack-merge": "^5.8.0"
     },
     "engines": {
