--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "dependencies": {
         "@sentry/node": "^6.19.7",
         "@sentry/tracing": "^6.19.7",
-        "mithril": "^2.0.4",
-        "redis": "^4.0.6",
+        "mithril": "^2.2.0",
+        "redis": "^4.1.0",
         "request-ip": "^2.1.3",
         "ress": "^5.0.2",
         "sendpulse-api": "github:coffeacloudberry/sendpulse-rest-api-node.js",
@@ -44,23 +44,23 @@
         "@turf/turf": "^6.5.0",
         "@types/chart.js": "^2.9.37",
         "@types/geojson": "^7946.0.8",
-        "@types/mapbox-gl": "^2.7.0",
-        "@types/mithril": "^2.0.10",
+        "@types/mapbox-gl": "^2.7.2",
+        "@types/mithril": "^2.0.11",
         "@types/mocha": "^9.1.1",
         "@types/request-ip": "^0.0.37",
         "@types/toastify-js": "^1.11.0",
-        "@typescript-eslint/eslint-plugin": "^5.21.0",
-        "@typescript-eslint/parser": "^5.21.0",
-        "@vercel/node": "^1.15.0",
+        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "@typescript-eslint/parser": "^5.25.0",
+        "@vercel/node": "^1.15.3",
         "chart.js": "^3.7.1",
         "chartjs-plugin-annotation": "^1.4.0",
         "clean-webpack-plugin": "^4.0.0",
-        "copy-webpack-plugin": "^10.2.4",
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^3.4.1",
-        "dotenv": "^16.0.0",
-        "ejs": "^3.1.7",
-        "eslint": "^8.14.0",
+        "css-minimizer-webpack-plugin": "^4.0.0",
+        "dotenv": "^16.0.1",
+        "ejs": "^3.1.8",
+        "eslint": "^8.16.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-json-es": "^1.5.7",
         "eslint-plugin-prettier": "^4.0.0",
@@ -71,29 +71,28 @@
         "jsdom": "^19.0.0",
         "jsdom-global": "^3.0.2",
         "mini-css-extract-plugin": "^2.6.0",
-        "mocha": "^9.2.2",
+        "mocha": "^10.0.0",
         "nock": "^13.2.4",
         "postcss-sass": "^0.5.0",
         "prettier": "^2.6.2",
         "prettier-plugin-import-sort": "^0.0.7",
-        "prettier-webpack-plugin": "^1.2.0",
-        "robotstxt-webpack-plugin": "^7.0.0",
-        "sass": "^1.51.0",
-        "sass-loader": "^12.6.0",
+        "robotstxt-webpack-plugin": "github:itgalaxy/robotstxt-webpack-plugin",
+        "sass": "^1.52.1",
+        "sass-loader": "^13.0.0",
         "schema-utils": "^4.0.0",
         "sitemap-webpack-plugin": "^1.1.1",
         "spdx-expression-parse": "^3.0.1",
         "style-loader": "^3.3.1",
-        "stylelint": "^14.8.1",
+        "stylelint": "^14.8.3",
         "ts-loader": "^9.3.0",
-        "ts-node": "^10.7.0",
+        "ts-node": "^10.8.0",
         "typedoc": "^0.22.15",
         "typedoc-plugin-not-exported": "^0.1.6",
         "typescript": "^4.6.4",
-        "webpack": "^5.72.0",
+        "webpack": "^5.72.1",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.8.1",
+        "webpack-dev-server": "^4.9.0",
         "webpack-log": "^3.0.2",
         "webpack-merge": "^5.8.0"
     },
