--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
                 },
                 {
                     "key": "Referrer-Policy",
-                    "value": "strict-origin-when-cross-origin"
+                    "value": "same-origin"
                 },
                 {
                     "key": "Access-Control-Allow-Origin",
