--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.43.0",
         "@vercel/node": "^2.6.3",
-        "chart.js": "3.9.1",
+        "chart.js": "^4.0.1",
         "chartjs-plugin-annotation": "^2.1.0",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^11.0.0",
