--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "sendpulse-api": "github:coffeacloudberry/sendpulse-rest-api-node.js",
         "snarkdown": "github:coffeacloudberry/snarkdown#2.1.1",
         "tippy.js": "^6.3.7",
+        "toastify-js": "^1.12.0",
         "translate.js": "^1.3.2"
     },
     "devDependencies": {
