--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 .env
 *.gpx
 *.NEF
+*.ORF
 *.pp3
 *.arp
 *.tif
@@ -17,6 +18,7 @@ tests/end_to_end/results
 .vercel
 .scannerwork/
 .idea
+*.trash.local
 *~
 
 # Generated files from custom Webpack plugins
