--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
                 {
                     "key": "X-Content-Type-Options",
                     "value": "nosniff"
+                },
+                {
+                    "key": "X-Frame-Options",
+                    "value": "DENY"
                 }
             ]
         },
