--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
                 {
                     "key": "X-Frame-Options",
                     "value": "DENY"
+                },
+                {
+                    "key": "X-Robots-Tag",
+                    "value": "none"
                 }
             ]
         },
