--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
 
+[tool.mypy]
+no_implicit_optional = true
+ignore_missing_imports = true
+show_error_codes = true
+pretty = true
+exclude = ["venv"]
+
 [tool.poetry]
 package-mode = false
 
