--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'none'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://api.mapbox.com https://unpkg.com; connect-src 'self' https://api.mapbox.com; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline' https://api.mapbox.com; font-src 'self' data:; worker-src blob:; child-src blob:; frame-ancestors 'none'; base-uri 'none'; form-action 'none'"
+                    "value": "default-src 'none'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://api.mapbox.com https://unpkg.com; connect-src 'self' https://api.mapbox.com https://api.explorewilder.com; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline' https://api.mapbox.com; font-src 'self' data:; worker-src blob:; child-src blob:; frame-ancestors 'none'; base-uri 'none'; form-action 'none'"
                 },
                 {
                     "key": "Permissions-Policy",
