Use pathname routing strategy for cleaner URL

--- a/vercel.json
+++ b/vercel.json
@@ -47,5 +47,19 @@
                 }
             ]
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/en/:path*",
+            "destination": "/"
+        },
+        {
+            "source": "/fi/:path*",
+            "destination": "/"
+        },
+        {
+            "source": "/fr/:path*",
+            "destination": "/"
+        }
     ]
 }
