--- a/package.json
+++ b/package.json
@@ -23,49 +23,49 @@
     "private": true,
     "license": "Hippocratic License 3.0",
     "dependencies": {
-        "mithril": "^2.2.8",
-        "ress": "^5.0.2",
-        "tippy.js": "^6.3.7",
-        "toastify-js": "^1.12.0",
-        "translate.js": "^1.3.2"
+        "mithril": "~2.2.10",
+        "ress": "~5.0.2",
+        "tippy.js": "~6.3.7",
+        "toastify-js": "~1.12.0",
+        "translate.js": "~1.3.2"
     },
     "devDependencies": {
-        "@eslint/js": "^9.13.0",
-        "@turf/turf": "^7.1.0",
-        "@types/chart.js": "^2.9.41",
-        "@types/geojson": "^7946.0.14",
-        "@types/mithril": "^2.2.7",
-        "@types/mocha": "^10.0.9",
-        "@types/toastify-js": "^1.12.3",
-        "@typescript-eslint/parser": "^8.10.0",
-        "chart.js": "^4.4.5",
-        "chartjs-plugin-annotation": "^3.1.0",
-        "clean-webpack-plugin": "^4.0.0",
-        "copy-webpack-plugin": "^12.0.2",
-        "css-loader": "^7.1.2",
-        "css-minimizer-webpack-plugin": "^7.0.0",
-        "dotenv": "^16.4.5",
-        "eslint": "^9.13.0",
-        "eslint-plugin-json": "^4.0.1",
-        "globals": "^15.11.0",
-        "html-webpack-plugin": "^5.6.2",
-        "import-sort-style-module": "^6.0.0",
-        "mapbox-gl": "^3.7.0",
-        "mini-css-extract-plugin": "^2.9.1",
-        "prettier": "^3.3.3",
-        "prettier-plugin-import-sort": "^0.0.7",
-        "sass": "^1.80.3",
-        "sass-loader": "^16.0.2",
-        "style-loader": "^4.0.0",
-        "ts-loader": "^9.5.1",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.10.0",
-        "webpack": "^5.95.0",
-        "webpack-bundle-analyzer": "^4.10.2",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.1.0",
-        "webpack-merge": "^6.0.1"
+        "@eslint/js": "~9.13.0",
+        "@turf/turf": "~7.1.0",
+        "@types/chart.js": "~2.9.41",
+        "@types/geojson": "~7946.0.14",
+        "@types/mithril": "~2.2.7",
+        "@types/mocha": "~10.0.9",
+        "@types/toastify-js": "~1.12.3",
+        "@typescript-eslint/parser": "~8.14.0",
+        "chart.js": "~4.4.6",
+        "chartjs-plugin-annotation": "~3.1.0",
+        "clean-webpack-plugin": "~4.0.0",
+        "copy-webpack-plugin": "~12.0.2",
+        "css-loader": "~7.1.2",
+        "css-minimizer-webpack-plugin": "~7.0.0",
+        "dotenv": "~16.4.5",
+        "eslint": "~9.13.0",
+        "eslint-plugin-json": "~4.0.1",
+        "globals": "~15.12.0",
+        "html-webpack-plugin": "~5.6.3",
+        "import-sort-style-module": "~6.0.0",
+        "mapbox-gl": "~3.8.0",
+        "mini-css-extract-plugin": "~2.9.2",
+        "prettier": "~3.3.3",
+        "prettier-plugin-import-sort": "~0.0.7",
+        "sass": "~1.81.0",
+        "sass-loader": "~16.0.3",
+        "style-loader": "~4.0.0",
+        "ts-loader": "~9.5.1",
+        "ts-mocha": "~10.0.0",
+        "typescript": "~5.6.3",
+        "typescript-eslint": "~8.14.0",
+        "webpack": "~5.96.1",
+        "webpack-bundle-analyzer": "~4.10.2",
+        "webpack-cli": "~5.1.4",
+        "webpack-dev-server": "~5.1.0",
+        "webpack-merge": "~6.0.1"
     },
     "engines": {
         "node": "^20.0.0",
