--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -20,3 +20,7 @@ enabled = true
   [analyzers.meta]
   max_line_length = 150
   type_checker = "mypy"
+
+[[analyzers]]
+name = "rust"
+enabled = true
