migrate from SASS to SCSS for better tooling support
Tools not handling the latest SASS are stylelint and prettier
Also, SCSS is more common than SASS

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -10,6 +10,12 @@
             "options": {
                 "parser": "babel-flow"
             }
+        },
+        {
+            "files": ["**/*.scss"],
+            "options": {
+                "printWidth": 120
+            }
         }
     ]
 }
