--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "webpack serve --config config/webpack.dev.js",
         "build": "webpack --config config/webpack.prod.js",
+        "stylelint": "stylelint src/style/**/*.scss --fix",
         "lint": "eslint .",
         "prettier": "prettier . --write",
         "test": "ts-mocha tests/unit/*.test.*",
@@ -57,6 +58,8 @@
         "sass": "~1.83.1",
         "sass-loader": "~16.0.4",
         "style-loader": "~4.0.0",
+        "stylelint": "^16.12.0",
+        "stylelint-config-standard-scss": "^14.0.0",
         "ts-loader": "~9.5.1",
         "ts-mocha": "~10.0.0",
         "typescript": "~5.7.2",
